--- a/staging/iii_sb_bands.tex
+++ b/staging/iii_sb_bands.tex
@@ -35,25 +35,26 @@
     node [above] {$\Gamma_{8}$};
 
   \coordinate (gamma 7) at (0,1.95);
-  \draw<4-> (gamma 7) arc [start angle=90,  end angle=30,   radius=1.5]
+  \draw<7-> (gamma 7) arc [start angle=90,  end angle=30,   radius=1.5]
     node [below right] {$\Gamma_{7}$};
-  \draw<4-> (gamma 7) arc [start angle=-90, end angle=-150, radius=1.5];
-  \draw<4-> [green,->] (gamma 7) ++(0,0.15) arc [start angle=90,  end angle=30,   radius=1.5]
+  \draw<7-> (gamma 7) arc [start angle=-90, end angle=-150, radius=1.5];
+  \draw<7-> [green,->] (gamma 7) ++(0,0.15) arc [start angle=90,  end angle=30,   radius=1.5]
     node [right] {$\tau_{{\scriptscriptstyle decay}}$};
 
   % defined energies
   \coordinate (energies) at (-1.5,0);
-  \draw<5-> [thick] ($(gamma 8) + (-2,0)$) -- ++(4,0);
-  \draw<5-> [<->] (energies) -- (energies |- gamma 8)
+  \draw<4-> [thick] ($(gamma 8) + (-2,0)$) -- ++(4,0);
+  \draw<4-> [<->] (energies) -- (energies |- gamma 8)
     node [pos=0.5,left] {$E_{g}^{\prime}$};
 
   \coordinate (vacuum level) at ($(gamma 8) + (0,0.6)$);
   \draw [thick,red] ($(vacuum level) + (-2,0)$) -- ++(4,0);
-  \draw<5-> [<->] (energies |- gamma 8) -- (energies |- vacuum level)
+  \draw<4-> [<->] (energies |- gamma 8) -- (energies |- vacuum level)
     node [pos=0.5,left] {$\phi$};
 
   % photon excitation
-  \draw<1> [-latex, blue, very thick] (0.05,0) -- ++(0,2.54);
+  \draw<1> [-latex, blue, very thick] (0.05,0) -- ++(0,2.54)
+    node [right,pos=0.7] {$\hbar \omega$};
   \draw<3-> [-latex, blue, very thick] (0.1,-0.52) -- ++(0,2.54);
   \draw<2-> [-latex, blue, very thick] (0.63,-0.38) -- ++(0,2.54);
   \draw<2-> [-latex, blue, very thick] (0.9,-0.23) -- ++(0,2.54)
