--- a/hardware.tex
+++ b/hardware.tex
@@ -1,5 +1,5 @@
 \begin{frame}{RRC Laboratory}
-  Intrumentation development at UIC's Research Resources Center --- East
+  Instrumentation development at UIC's Research Resources Center --- East
   \begin{center}
     \includegraphics{lab}
   \end{center}
