--- a/introduction.tex
+++ b/introduction.tex
@@ -18,7 +18,7 @@
       \begin{itemize}
         \item<2-> JEOL 2010F: 0.19nm
         \item<3-> FEI Titan G2: 0.08nm
-        \item<4-> TEAM abberation corrected microscope aims for 0.05nm
+        \item<4-> TEAM aberration corrected microscope aims for 0.05nm
         \item<5-> Temporal resolution: video rate (commonly $\sim$30fps)
       \end{itemize}
       \begin{figure}
