--- a/simulation.tex
+++ b/simulation.tex
@@ -16,7 +16,7 @@ No model existed that had all these features.
 	\begin{itemize}
 		\item<2-> Self-similar Gaussian electron packet
 		\item<3-> 6D (3 position \& 3 momentum) moment analysis
-		\item<4-> Mulitdimensional Gaussian integral
+		\item<4-> Multidimensional Gaussian integral
 		\item<5->[$\Rightarrow$] Reduces free-space propagation dynamics to six first order coupled differential equations!
 	\end{itemize}
     While this model is the propagation engine of my model, alone it lacks:
