--- a/appendix.tex
+++ b/appendix.tex
@@ -144,7 +144,7 @@
     \begin{equation*}
       P(\theta) = \smashoperator{\int\limits_{0}^{\Delta E = \hbar \omega - \Phi}} T(E,\theta) \dx{E}
     \end{equation*}
-    \centerline{\tiny Assuming flat fermi function}
+    \centerline{\tiny Assuming flat Fermi function}
     \begin{figure}
       \centering
       \includegraphics[width=0.9\linewidth]{Angle}
