added este plot

--- a/defense.tex
+++ b/defense.tex
@@ -24,6 +24,8 @@
 \usetikzlibrary{positioning,calc}
 \usetikzlibrary{shapes.geometric,shapes.arrows,shapes.callouts,arrows,decorations.pathmorphing}
 
+\usepackage{gnuplot-lua-tikz}
+
 \pgfdeclarelayer{background}
 \pgfdeclarelayer{below-main}
 \pgfdeclarelayer{above-main}
