--- a/photocathode.tex
+++ b/photocathode.tex
@@ -477,6 +477,13 @@ well as a fit to a $\cos^2\theta$ distribution.\footcite{zawadzka_evanescent}}
 \end{frame}
 
 \begin{frame}
+  \begin{figure}
+    \centering
+    \input{este_plot}
+  \end{figure}
+\end{frame}
+
+\begin{frame}
   \begin{columns}
     \begin{column}{0.45\linewidth}
       \begin{figure}
