more work on este section

--- a/defense.tex
+++ b/defense.tex
@@ -48,6 +48,8 @@
 \date{April 26, 2013}
 
 \providecommand{\smallT}[0]{ { \scriptscriptstyle T } }
+\providecommand{\smallzero}[0]{ { \scriptscriptstyle 0 } }
+\providecommand{\kB}[0]{\ensuremath{ k_{{\scriptscriptstyle B}} }}
 \providecommand{\dx}[1]{\ensuremath{ \operatorname{d}\!#1 }}
 \providecommand{\vf}[0]{\only<presentation>{\vfill}}
 \providecommand{\rowvisible}[4]{
