--- a/este_plot.tex
+++ b/este_plot.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}[gnuplot]
+%\begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 4.6p0 (Lua 5.1; terminal rev. 99, script rev. 100)
 %% Sun 21 Apr 2013 07:00:39 PM CDT
 \gpsolidlines
@@ -52,8 +52,8 @@
 \draw[gp path] (6.601,5.756)--(6.421,5.756);
 \node[gp node left] at (6.785,5.756) { 2500};
 \draw[gp path] (1.688,5.756)--(1.688,0.985)--(6.601,0.985)--(6.601,5.756)--cycle;
-\node[gp node center,rotate=-270] at (0.246,3.370) {HWe$^{-1}$M Beam Size ($\mu$m)};
-\node[gp node center,rotate=-270] at (8.042,3.370) {Electrons / Pulse};
+\node[gp node center,rotate=-270] at (0.246,3.370) {HWe$^{-1}$M Beam Size ($\mu$m) ($\square$)};
+\node[gp node center,rotate=-270] at (8.042,3.370) {Electrons / Pulse ($\bigcirc$)};
 \node[gp node center] at (4.144,0.215) {UV Laser Pulse Energy (nJ)};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinetype{gp lt plot 4}
@@ -279,5 +279,5 @@
 \draw[gp path] (1.688,5.756)--(1.688,0.985)--(6.601,0.985)--(6.601,5.756)--cycle;
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 1}{\pgfpoint{1.688cm}{0.985cm}}{\pgfpoint{6.601cm}{5.756cm}}
-\end{tikzpicture}
+%\end{tikzpicture}
 %% gnuplot variables
