tweak simulation slides

--- a/simulation.tex
+++ b/simulation.tex
@@ -23,22 +23,23 @@ No model existed that had all these features.
     \begin{itemize}
       \item<6-> Electron-optical elements
       \item<7-> Realistic initial conditions
+      \item<8-> A usable implementation!
     \end{itemize}
 \end{frame}
 
 \begin{frame}{AG Model Extension\footcite{berger_semi-analytic_2010}}
 \begin{columns}
   \begin{column}{0.54\linewidth}
-    The extended AG model adds:
+    The extended AG model includes:
     \begin{itemize}
       \item Linear external forces
       \begin{itemize}
         \item<2-> Magnetic lenses
         \item<2-> RF Cavities
-        \item<3-> Anode lensing ($E_{DC}$ by FEM)
+        \item<3-> Anode lensing
       \end{itemize}
-      \item<4-> Gaussian laser initial conditions (manuscript in prep.)
-      \item<5-> Apertures (inc. pending dynamic lensing analysis)
+      \item<4-> Gaussian laser initial conditions
+      \item<5-> Implementation as Perl API
     \end{itemize}
   \end{column}
   \begin{column}{0.4\linewidth}
