--- a/defense.tex
+++ b/defense.tex
@@ -42,7 +42,7 @@
 \usepackage[citestyle=authoryear]{biblatex}
 \addbibresource{bibliography.bib}
 
-\title[Ultrafast EM]{High Space-Time Resolution\\Transmission Electron Microscopy}
+\title[Ultrafast EM]{Ultrafast Electron Microscopes:\\Design Criteria, Electron Sources, and Column Modeling}
 \author{Joel Berger}
 \institute[UIC]{Ph.D. Preliminary Examination}
 \date{April 26, 2013}
@@ -83,30 +83,30 @@
 \section{Introduction}
 \include{introduction}
 
-\section{Physical Considerations}
+%\section{Physical Considerations}
 
-\begin{frame}{Physical Considerations}
-A major focus of my research has been to identify physical limitations, verify them, and propose and test solutions for them.\footcite{berger_dc_2009}
-\begin{figure}
-  \centering
-  \includegraphics{mammoth}
-\end{figure}
-\end{frame}
+%\begin{frame}{Physical Considerations}
+%A major focus of my research has been to identify physical limitations, verify them, and propose and test solutions for them.\footcite{berger_dc_2009}
+%\begin{figure}
+%  \centering
+%  \includegraphics{mammoth}
+%\end{figure}
+%\end{frame}
 
-\subsection{Difficulty Generating High Charge Ultrafast Pulses}
+\section{Generating High Charge Ultrafast Pulses}
 \include{number_electrons}
-
-\subsection{Need for Low Emittance Pulses}
-\include{resolution}
-
-\section{Photocathode Engineering/Reducing $\Delta p_{\smallT}$}
-\include{photocathode}
 
 \section{Hardware Development}
 \include{hardware}
 
-\section{Simulation}
+\section{UEM Column Simulation}
 \include{simulation}
+
+\section{Reducing Pulse Emittance}
+\include{resolution}
+
+\section{Photocathode Engineering/Reducing $\Delta p_{\smallT}$}
+\include{photocathode}
 
 \section{Future Work / Summary}
 
