--- a/defense.tex
+++ b/defense.tex
@@ -93,7 +93,7 @@
 %\end{figure}
 %\end{frame}
 
-\section{Generating High Charge Ultrafast Pulses}
+\section{Generating High-charge Ultrafast Pulses}
 \include{number_electrons}
 
 \section{Hardware Development}
@@ -143,7 +143,7 @@ Time Resolved Electron Microscopy is attempting to push time resolution to sub-p
 Photocathode engineering
 \begin{itemize}
   \item Plasmon-enhanced photoemission
-  \item Excited state thermionic emission III-Atimonides ($m^*$)
+  \item Excited-state thermionic emission III-Atimonides ($m^*$)
   \item Investigate $m^*$ dependence in other photocathode material
 \end{itemize}
 
