--- a/photocathode.tex
+++ b/photocathode.tex
@@ -512,11 +512,11 @@ well as a fit to a $\cos^2\theta$ distribution.\footcite{zawadzka_evanescent}}
       \begin{tabular}{|c|c|c|}
         \hline
           & GaSb & InSb \\ \hline
+        \rowvisible{2-}{$m^{*}(\Gamma_8)$}{$0.3 m_0$}{$0.5 m_0$} \\ \hline
         \rowvisible{4-}{$E_{g}^{\prime}$}{3.77eV}{3.59eV} \\ \hline
         \rowvisible{4-}{$\phi$}{0.99eV}{1.18eV} \\ \hline
         \rowvisible{5-}{Excess $E$}{$\sim$0.35eV}{$\sim$0.41eV} \\
         \rowvisible{5-}{$\Rightarrow$ initial $T_e$}{4200K}{4900K} \\ \hline
-        \rowvisible{8-}{$m^{*}(\Gamma_8)$}{$0.3 m_0$}{$0.5 m_0$} \\ \hline
       \end{tabular}
       \vspace{3mm}
       \visible<6->{
@@ -536,7 +536,7 @@ well as a fit to a $\cos^2\theta$ distribution.\footcite{zawadzka_evanescent}}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Thermionic Photoemission}
+\begin{frame}{Excited-State Thermionic Photoemission}
   Fitting the transverse momentum
     $\Delta p_{\smallT} = \sqrt{m \kB T_e} \Rightarrow m T_e \approx 360m_{\smallzero}$
   \begin{columns}
