--- a/defense.tex
+++ b/defense.tex
@@ -115,14 +115,15 @@
     A novel UEM housed at UIC (Research Resources Center --- East) incorporating my laser-driven photogun
   \end{block}
   \begin{itemize}
-    \item<2-> Investigate $m^{*}$ photoemission dependence
-    \item<3-> Install RF compression cavity
-    \item<4-> Devise and install pulse duration measurement
-    \item<5-> Extend simulation for longer pulses and relativistic speeds
+    \item<2-> Collaboration with PNNL on new UEM 
+    \item<3-> Investigate $m^{*}$ photoemission dependence
+    \item<4-> Install RF compression cavity
+    \item<5-> Devise and install pulse duration measurement
+    \item<6-> Extend simulation for longer pulses and relativistic speeds
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Summary}
+\begin{frame}{Summary: UEM}
 Time Resolved Electron Microscopy is attempting to push time resolution to sub-ps time scales, to do so I addressed
 \begin{itemize}
   \item Rose Criterion $\Rightarrow$ Require 100 electrons/pixel
@@ -139,14 +140,18 @@ Time Resolved Electron Microscopy is attempting to push time resolution to sub-p
     \item[$\hookrightarrow$] Developed extended AG model, implementation available for users
   \end{itemize}
 \end{itemize}
+\end{frame}
 
-Photocathode engineering
+\begin{frame}{Summary: Photocathode engineering}
 \begin{itemize}
   \item Plasmon-enhanced photoemission
-  \item Excited-state thermionic emission III-Atimonides ($m^*$)
-  \item Investigate $m^*$ dependence in other photocathode material
+  \item Excited-state thermionic emission ($m^*$)
+  \begin{itemize}
+    \item III-Antimonides
+    \item III-Arsenides
+  \end{itemize}
+  \item Investigate $m^*$ dependence in other photocathode materials
 \end{itemize}
-
 \end{frame}
 
 \begin{frame}{Thanks}
