--- a/photocathode.tex
+++ b/photocathode.tex
@@ -561,9 +561,11 @@ well as a fit to a $\cos^2\theta$ distribution.\footcite{zawadzka_evanescent}}
       }
     \end{column}
   \end{columns}
-  \visible<3->{
-    \begin{center}
-      \alert{$\Delta p_{\smallT} = \sqrt{m^* \kB T_e}$}
-    \end{center}
+  \visible<3->{ 
+    \begin{itemize}
+      \item<3-> \alert{$\Delta p_{\smallT} = \sqrt{m^* \kB T_e}$}
+      \item<4-> Exciting prospect for low $\Delta p_{\smallT}$ electron sources
+      \item<5-> Investigate $m^*$ implications for other photoemission processes
+    \end{itemize}
   }
 \end{frame}
