working on flow, especially in conclusions

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -129,3 +129,17 @@
   url = {http://link.aip.org/link/?APL/79/2130/1},
   doi = {10.1063/1.1406562}
 }
+
+@conference{liu_narrow_2005,
+  author = {Zhi Liu and Yun Sun and P. Pianetta and R. F. W. Pease},
+  title = {Narrow cone emission from negative electron affinity photocathodes},
+  journal = {J. Vac. Sci. Technol. B},
+  publisher = {AVS},
+  year = {2005},
+  volume = {23},
+  number = {6},
+  pages = {2758-2762},
+  keywords = {photocathodes; gallium arsenide; III-V semiconductors; electron affinity; effective mass; photoemission; current density},
+  url = {http://link.aip.org/link/?JVB/23/2758/1},
+  doi = {10.1116/1.2101726}
+}
