--- a/defense.tex
+++ b/defense.tex
@@ -109,92 +109,7 @@
 \include{photocathode}
 
 \section{Future Work / Summary}
-
-\begin{frame}{Future Work}
-  \begin{block}{Ultrafast Group Goal}
-    A novel UEM housed at UIC (Research Resources Center --- East) incorporating my laser-driven photogun
-  \end{block}
-  \begin{itemize}
-    \item<2-> Collaboration with PNNL on new UEM 
-    \item<3-> Investigate $m^{*}$ photoemission dependence
-    \item<4-> Install RF compression cavity
-    \item<5-> Devise and install pulse duration measurement
-    \item<6-> Extend simulation for longer pulses and relativistic speeds
-  \end{itemize}
-\end{frame}
-
-\begin{frame}{Summary: UEM}
-Time Resolved Electron Microscopy is attempting to push time resolution to sub-ps time scales, to do so I addressed
-\begin{itemize}
-  \item Rose Criterion $\Rightarrow$ Require 100 electrons/pixel
-  \item Short-pulse Child-Langmuir $\Rightarrow$ Require large emission area
-  \begin{itemize}
-    \item[$\hookrightarrow$] Design/build large-aperture electron optical elements
-  \end{itemize}
-  \item High resolution $\Rightarrow$ Require low emittance pulses
-  \begin{itemize}
-    \item[$\hookrightarrow$] Investigate novel photoemission sources
-  \end{itemize}
-  \item Must maintain pulse integrity during propagation
-  \begin{itemize}
-    \item[$\hookrightarrow$] Developed extended AG model, implementation available for users
-  \end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Summary: Photocathode engineering}
-\begin{itemize}
-  \item Plasmon-enhanced photoemission
-  \item Excited-state thermionic emission ($m^*$)
-  \begin{itemize}
-    \item III-Antimonides
-    \item III-Arsenides
-  \end{itemize}
-  \item Investigate $m^*$ dependence in other photocathode materials
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Thanks}
-Thanks to:
-\begin{columns}
-  \begin{column}{.49\linewidth}
-    \begin{itemize}
-      \item Committee members
-      \item Dept. of Energy (NNSA)
-      \item National Science Foundation
-      \item Argonne Nat'l Lab (FIB)
-      \item Prof. W. Andreas Schroeder
-      \item Ultrafast Group members
-      \begin{itemize}
-        \item Ben Rickman
-        \item John Hogan
-        \item Tuo Li
-        \item Stephanie Schieffer\\(Air Force Research Lab)
-      \end{itemize}
-    \end{itemize}
-  \end{column}
-
-  \begin{column}{.49\linewidth}
-    \begin{columns}
-      \begin{column}{1in}
-        \begin{figure}
-          \includegraphics[width=0.7in]{doe}
-        \end{figure}
-      \end{column}
-
-      \begin{column}{1in}
-        \begin{figure}
-          \includegraphics[width=0.7in]{nsf}
-        \end{figure}
-      \end{column}
-    \end{columns}
-    \vspace{0.4in}
-    \begin{center}
-      \includegraphics[width=1.3in]{Laser_Small}
-    \end{center}
-  \end{column}
-\end{columns}
-\end{frame}
+\include{conclusion}
 
 %\appendix
 %\include{appendix}
