--- a/simulation.tex
+++ b/simulation.tex
@@ -12,12 +12,12 @@ No model existed that had all these features.
 \end{frame}
 
 \begin{frame}{Pulse Modeling}
-	Analytic Gaussian (AG) model of Michalik and Sipe\footcite{michalik_analytic_2006}: 
-	\begin{itemize}
-		\item<2-> Self-similar Gaussian electron packet
-		\item<3-> 6D (3 position \& 3 momentum) moment analysis
-		\item<4-> Multidimensional Gaussian integral
-		\item<5->[$\Rightarrow$] Reduces free-space propagation dynamics to six first order coupled differential equations!
+  Analytic Gaussian (AG) model of Michalik and Sipe\footcite{michalik_analytic_2006}: 
+  \begin{itemize}
+  \item<2-> Self-similar Gaussian electron packet
+  \item<3-> Mean-field internal Coulomb repulsion 
+  \item<4-> 6D (3 position \& 3 momentum) moment analysis
+  \item<5->[$\Rightarrow$] Reduces free-space propagation dynamics to six first order coupled differential equations!
 	\end{itemize}
     While this model is the propagation engine of my model, alone it lacks:
     \begin{itemize}
