tweaking hardware section

--- a/hardware.tex
+++ b/hardware.tex
@@ -1,7 +1,7 @@
 \begin{frame}{RRC Laboratory}
   Instrumentation development at UIC's Research Resources Center --- East
   \begin{center}
-    \includegraphics{lab}
+    \includegraphics{lab2}
   \end{center}
 \end{frame}
 
@@ -22,8 +22,8 @@
     \begin{column}{0.49\linewidth}
       \begin{itemize}
         \item<5-> Large laser angular acceptance
-        \item<5-> Large photocathode area (Wehnelt)
-        \item<5-> Smooth easily polished surfaces
+        \item<6-> Large photocathode area (Wehnelt)
+        \item<7-> Smooth easily polished surfaces
       \end{itemize}
       \begin{figure}
         \centering
@@ -57,13 +57,27 @@
 \end{frame}
 
 \begin{frame}{Magnetic Lenses}
-  For both imaging our photocathode emission and its momentum distribution (Fourier plane)
-  \begin{itemize}
-    \item<2-> Custom design\footcite{el-kareh_electron_1970}
-    \item<3-> Large bore (aperture)
-    \item<4-> High permeability pole piece (NiFe alloy $\mu \approx $50000)
-  \end{itemize}
-  \uncover<5->{As a pair, will be used to correct for RF cavity's inherent divergence}
+  \begin{columns}
+    \begin{column}{0.54\linewidth}
+      \begin{itemize}
+        \item<2-> Custom design (El-Kareh (1970))
+        \item<3-> Large bore (aperture)
+        \item<4-> High permeability pole piece\\(NiFe alloy $\mu \approx $50000)
+      \end{itemize}
+      Uses:
+      \begin{itemize}
+        \item<5-> Imaging our photocathode emission
+        \item<6-> Visualizing momentum distribution (Fourier plane)
+        \item<7-> Pair used to correct for RF cavity's inherent divergence
+        \item<8-> Focusing on to sample
+      \end{itemize}
+    \end{column}
+    \begin{column}{0.44\linewidth}
+      \begin{center}
+        \includegraphics[width=\linewidth]{maglens}
+      \end{center}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Magnetic Lenses Installed}
