include appendix slides

--- a/defense.tex
+++ b/defense.tex
@@ -111,7 +111,7 @@
 \section{Future Work / Summary}
 \include{conclusion}
 
-%\appendix
-%\include{appendix}
+\appendix
+\include{appendix}
 
 \end{document}
