added 2PTE plot to appendix

--- a/appendix.tex
+++ b/appendix.tex
@@ -391,3 +391,9 @@ N.B. the coefficient allows $ \int f d\vec{r} d\vec{p} = N $
     \end{column}
   \end{columns}
 \end{frame}
+
+\begin{frame}{Two-photon Assisted Thermionic Emission (2PTE)}
+  \begin{center}
+    \input{au_plot}
+  \end{center}
+\end{frame} 
