updated laser specs

--- a/hardware.tex
+++ b/hardware.tex
@@ -158,8 +158,8 @@
     \item<2-> 250 fs pulse duration
     \item<3-> 2W output at 63MHz (31 nJ)
     \item<4-> Fundamental: 1047nm ($\hbar \omega$ = 1.2eV)
-    \item<5-> 2$\hbar \omega = $ 2.47eV (524nm): $\Rightarrow$ Au plasmon, 2 photon over Ta
-    \item<6-> 4$\hbar \omega = $ 4.75eV (262nm): $\Rightarrow$ 1 photon over Ta
+    \item<5-> 2$\hbar \omega = $ 2.37eV (523nm) $\Rightarrow 2 \hbar \omega > \phi_{{\scriptscriptstyle Ta}}$, Au plasmon
+    \item<6-> 4$\hbar \omega = $ 4.75eV (261nm) $\Rightarrow   \hbar \omega > \phi_{{\scriptscriptstyle Ta}}$
     \item<7-> Adjustable laser cavity length allows matching:
     \begin{itemize}
       \item<7-> Laser repetition rate
